<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:padding="32dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/driver_name_hint" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/driver_name"
                android:inputType="textPersonName|textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registration_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="@string/attention_without_connect_device"
            android:textColor="@color/design_default_color_error"
            android:textSize="18sp" />

        <!--<Button
            android:id="@+id/wifi_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi" />-->
    </LinearLayout>
</ScrollView>